--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         id: ID
         name: 名前
         description: 詳しい説明
+        elapsed_minutes: 調理時間
         created_at: 登録日時
         updated_at: 更新日時
   date:
