--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       recipe: レシピ
+      food: 材料
     attributes:
       recipe:
         id: ID
@@ -17,6 +18,12 @@ ja:
         elapsed_minutes: 調理時間
         created_at: 登録日時
         updated_at: 更新日時
+      food:
+        name: 名前
+      step:
+        description: 内容
+      kitchenware:
+        name: 名前
   date:
     abbr_day_names:
     - 日
