--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,10 +10,13 @@ ja:
     models:
       recipe: レシピ
       food: 材料
+      step: 手順
+      kitchenware: 道具
     attributes:
       recipe:
         id: ID
         name: 名前
+        score: スコア
         description: 詳しい説明
         elapsed_minutes: 調理時間
         created_at: 登録日時
