画像の表示に対応

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,6 +11,7 @@ ja:
       recipe: レシピ
       food: 材料
       step: 手順
+      category: カテゴリ
       kitchenware: 道具
     attributes:
       recipe:
